--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,12 +1,28 @@
+* {
+  margin: 0;
+  padding: 0;
+  border-collapse: collapse;
+}
 html, body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 #wrapper {
   width: 450px;
   margin: auto;
   border: solid thin black;
+}
+
+.snake-status-container {
+  display: flex;
+  border-bottom: 1px solid gray;
+  height: 20px;
+  align-items: center;
+}
+
+.status-div {
+  padding-left: 5px;
+  flex-grow: 1;
+  text-align: center;
 }
